--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
-name = aether
+name = aether_new
 description = Adds an extremely hard  to obtain (and very powerful) substance called aether.
 depends = vessels, default, bucket
